# OscMackieControl

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  HUI Mackie Control.touchosc  LICENSE  MacOSXBundleInfo.plist.in  MidiIO.cpp  MidiIO.h  OscMackieControl.pro  README.md  RtMidi.h  Widget.cpp  Widget.h  Widget.ui  index.xml  testOSC.pro  testOSC.pro.user.4d4b4f3
.github/workflows/: ccpp.yml  self.yml
.github/workflows-disabled/: ccpp.yml
build-OscMackieControl-Desktop_Qt_5_11_0_clang_64bit-Release/: .qmake.stash  Makefile  moc_MidiIO.cpp  moc_OscIO.cpp  moc_Translator.cpp  moc_Widget.cpp  moc_predefs.h  ui_Widget.h
build-OscMackieControl-Desktop_Qt_5_9_0_clang_64bit-Debug/: .qmake.stash  Makefile  moc_MidiIO.cpp  moc_OscIO.cpp  moc_Translator.cpp  moc_Widget.cpp  moc_predefs.h  ui_Widget.h
doc/: .~lock.MackieControlProtocol_FR.pdf#  Mackie Control Protocol.md
doc/in progress/: .~lock.mcpdoc_EN.odt#  mcpdoc_EN.odt  mcpdoc_FR.odt
graphical/: icon.icns  logo.psd  logoBackground.psd  logoTypo.ai
gui/: Assistant.qml  AwesomeRoundButton.qml  ButtonBreakdown.qml  GenericStatus.qml  IOChart.qml  IconLabel.qml  MCU.qml  Mapping.qml  Mcu.qml  McuButton.qml  McuClickableArea.qml  MidiSettings.qml  MidiStatus.qml  OscSettings.qml  OscStatus.qml  Settings.qml  Status.qml  TopBar.qml  TouchOSCAnimation.qml  icons.qrc  main.qml  qml.qrc
lib/osx/: libosc.1.0.0.dylib  libosc.1.dylib
src/: .qmake.stash  CMakeLists.txt  Makefile  MidiIO.cpp  OscIO.cpp  OscIO.h  OscMackieControl.pro  OscMackieControl.pro.user.2ff19aa  OscMackieControl.pro.user.4b33e52  Translator.cpp  Translator.h  Widget.cpp  Widget.h  Widget.ui  backend.cpp  backend.h  iconmanager.cpp  iconmanager.h  iomonitor.cpp  iomonitor.h  main.cpp  mapping.cpp  mapping.h  midiNote.h  oscmackiecontrolapp.cpp  oscmackiecontrolapp.h  src.pro  touchoscbroadcaster.cpp  touchoscbroadcaster.h  version.h.in
src/old/: MidiIO.h  Translator.cpp  Widget.cpp  Widget.h
